Creacion de front para business post and show

--- a/src/app/view/header/header.html
+++ b/src/app/view/header/header.html
@@ -8,10 +8,14 @@
         </a>
 
         <a >
-            <p class=" text-gray-800 cursor-pointer hover:text-blue-600 border-b-2">Explorar Emprendimientos</p>
+            <p routerLink="/business_show" class=" text-gray-800 cursor-pointer hover:text-blue-600 border-b-2">Explorar Emprendimientos</p>
         </a>
 
-        <a href="">Publicar tu emprendimiento</a>
+        <a href="" routerLink="/business_post">
+            <p class=" text-gray-800 cursor-pointer hover:text-blue-600 border-b-2">
+                Publicar tu emprendimiento
+            </p>
+        </a>
 
         <a routerLink="/login">
             <p class=" text-gray-800 cursor-pointer hover:text-blue-600 border-b-2">
