--- a/src/app/view/register/register.html
+++ b/src/app/view/register/register.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center border-t p-20 ">
+<div class="flex justify-center items-center p-20 ">
   <form (submit)="handleSubmit($event)" class="flex flex-col gap-3 rounded-lg p-10 items-center border" novalidate>
     <!-- ... encabezado etc ... -->
 
