--- a/src/app/view/main-page/main-page.html
+++ b/src/app/view/main-page/main-page.html
@@ -1,1 +1,5 @@
 <p>main-page works!</p>
+<div *ngFor="let business of businesses">
+    <img class="rounded-lg " [src]="business.imagePath || 'https://via.placeholder.com/150'"
+    alt="Imagen del emprendimiento" />
+</div>
