EPR-36: creacion comentarios

--- a/src/app/view/header/header.html
+++ b/src/app/view/header/header.html
@@ -17,6 +17,12 @@
             </p>
         </a>
 
+        <a routerLink="/business_comments">
+            <p class=" text-gray-800 cursor-pointer hover:text-blue-600 border-b-2">
+                comentarios
+            </p>
+        </a>
+
         <a routerLink="/login">
             <p class=" text-gray-800 cursor-pointer hover:text-blue-600 border-b-2">
                 inciar sesión
