--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <div class="mx-auto max-w-6xl p-2">
     <app-header></app-header>
     <router-outlet></router-outlet>
+    <app-reporte></app-reporte>
 </div>
