--- a/src/app/view/main-page/main-page.html
+++ b/src/app/view/main-page/main-page.html
@@ -3,3 +3,4 @@
     <img class="rounded-lg " [src]="business.imagePath || 'https://via.placeholder.com/150'"
     alt="Imagen del emprendimiento" />
 </div>-->
+ <app-reporte></app-reporte> 
