swaguer en front

--- a/src/app/view/reporte/reporte.html
+++ b/src/app/view/reporte/reporte.html
@@ -1,4 +1,4 @@
-<p>usuario reporte</p>
+
 <div class="flex gap-4 mt-6">
 
   <!-- Botón PDF -->
@@ -6,7 +6,7 @@
     (click)="descargarPDF()"
     class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white rounded-lg shadow-md transition"
   >
-    📄 Descargar PDF
+    📄 Descargar PDF Usuario
   </button>
 
   <!-- Botón Excel -->
@@ -14,7 +14,14 @@
     (click)="descargarExcel()"
     class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white rounded-lg shadow-md transition"
   >
-    📊 Descargar Excel
+    📊 Descargar Excel Usuario
+  </button>
+
+  <!-- Botón swaguer -->
+  <button
+    class="px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg shadow-md transition"
+  >
+    <a target="_blank" href="https://emprenderedbackend-production.up.railway.app/swagger-ui/index.html">Visita Swaguer</a>
   </button>
 
 </div>
